--- a/Translation/item.json
+++ b/Translation/item.json
@@ -6844,6 +6844,253 @@
         "th":"",
         "id":""
     },
+    "item.3112.name": {
+		"en":"[Spirit Egg] Poisonous Flower",
+		"fr":"[Oeuf d'esprit] Fleur vénéneuse",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3113.name": {
+		"en":"[Spirit Egg] Nagar Warrior",
+		"fr":"[Oeuf d'esprit] Guerrier Nagar",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3114.name": {
+		"en":"[Spirit Egg] Nagar Spellmaster",
+		"fr":"[Oeuf d'esprit] Maître des sorts Nagar",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3115.name": {
+		"en":"[Spirit Egg] Mudpond Dweller",
+		"fr":"[Oeuf d'esprit] Habitant de l'étang",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3116.name": {
+		"en":"[Spirit Egg] Lizardman",
+		"fr":"[Oeuf d'esprit] Homme-lézard",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3117.name": {
+		"en":"[Spirit Egg] Carnivorax",
+		"fr":"[Oeuf d'esprit] Carnivorax",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3118.name": {
+		"en":"[Spirit Egg] Octopus Spellcaster",
+		"fr":"[Oeuf d'esprit] Pieuvre Ensorceleuse",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3119.name": {
+		"en":"[Spirit Egg] Grey Shark",
+		"fr":"[Oeuf d'esprit] Requin Gris",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3120.name": {
+		"en":"[Spirit Egg] Nagar Zealot",
+		"fr":"[Oeuf d'esprit] Fanatique Nagar",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3121.name": {
+		"en":"[Spirit Egg] General Keeger's Specter",
+		"fr":"[Oeuf d'esprit] Spectre du Général Keeger",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3122.name": {
+		"en":"[Spirit Egg] [Octo-Invoker] Abatton",
+		"fr":"[Oeuf d'esprit] [Octo-Invocateur] Abatton",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3123.name": {
+		"en":"[Spirit Egg] Kavakit",
+		"fr":"[Oeuf d'esprit] Kavakit",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.3124.name": {
+		"en":"[Spirit Egg] Water Genie",
+		"fr":"[Oeuf d'esprit] Génie d'Eau",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
     "item.3801.name":{
         "en":"[Spirit Egg] Immortal",
         "fr":"[Oeuf d'esprit] Immortel",
@@ -9029,6 +9276,253 @@
         "th":"",
         "id":""
     },
+    "item.4112.name": {
+		"en":"Poisonous Flower",
+		"fr":"Fleur vénéneuse",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4113.name": {
+		"en":"Nagar Warrior",
+		"fr":"Guerrier Nagar",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4114.name": {
+		"en":"Nagar Spellmaster",
+		"fr":"Maître des sorts Nagar",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4115.name": {
+		"en":"Mudpond Dweller",
+		"fr":"Habitant de l'étang",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4116.name": {
+		"en":"Lizardman",
+		"fr":"Homme-lézard",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4117.name": {
+		"en":"Carnivorax",
+		"fr":"Carnivorax",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4118.name": {
+		"en":"Octopus Spellcaster",
+		"fr":"Pieuvre Ensorceleuse",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4119.name": {
+		"en":"Grey Shark",
+		"fr":"Requin Gris",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4120.name": {
+		"en":"Nagar Zealot",
+		"fr":"Fanatique Nagar",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4121.name": {
+		"en":"General Keeger's Specter",
+		"fr":"Spectre du Général Keeger",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4122.name": {
+		"en":"[Octo-Invoker] Abatton",
+		"fr":"[Octo-Invocateur] Abatton",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4123.name": {
+		"en":"Kavakit",
+		"fr":"Kavakit",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
+	"item.4124.name": {
+		"en":"Water Genie",
+		"fr":"Génie d'Eau",
+		"es":"",
+		"zh-cn":"",
+		"zh-tw":"",
+		"kr":"",
+		"ru":"",
+		"tr":"",
+		"de":"",
+		"jp":"",
+		"pt":"",
+		"vi":"",
+		"ar":"",
+		"it":"",
+		"pl":"",
+		"th":"",
+		"id":""
+	},
     "item.4801.name":{
         "en":"Immortal",
         "fr":"Immortel",
