--- a/Translation/event.json
+++ b/Translation/event.json
@@ -68,7 +68,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đăng Ký",
         "ar":"",
         "it":"",
         "pl":"",
@@ -87,7 +87,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hủy Đăng Ký",
         "ar":"",
         "it":"",
         "pl":"",
@@ -182,7 +182,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chiến Trường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -201,7 +201,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"K.Nghiệm, Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -239,7 +239,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đồng Minh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -258,7 +258,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Địch Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -277,7 +277,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đội",
         "ar":"",
         "it":"",
         "pl":"",
@@ -296,7 +296,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cờ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -315,7 +315,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đi",
         "ar":"",
         "it":"",
         "pl":"",
