--- a/Translation/general.json
+++ b/Translation/general.json
@@ -87,7 +87,7 @@
         "de":"Token",
         "jp":"",
         "pt":"",
-        "vi":"Kim Tệ",
+        "vi":"Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
@@ -106,7 +106,7 @@
         "de":"Tokens",
         "jp":"",
         "pt":"",
-        "vi":"Kim Tệ",
+        "vi":"Mã Kim",
         "ar":"",
         "it":"",
         "pl":"",
