--- a/Translation/item.json
+++ b/Translation/item.json
@@ -6609,7 +6609,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Cá Hề",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6628,7 +6628,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Cá Mập",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6647,7 +6647,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Phù Thủy Ác Độc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6666,7 +6666,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Rối Tai Ương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6685,7 +6685,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Mực",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6704,7 +6704,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Cua",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6723,7 +6723,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Hồn Ma Thủy Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6742,7 +6742,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Hoa Dương Hải",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6761,7 +6761,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Cá Đột Biến",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6780,7 +6780,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Sao Biển",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6799,7 +6799,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Cua Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6818,7 +6818,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Sứa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6837,7 +6837,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Sò Biến Dị",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6856,7 +6856,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Hoa Độc",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -6875,7 +6875,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Chiến Binh Hải Yêu",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -6894,7 +6894,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Thuật Chủ Hải Yêu",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -6913,7 +6913,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Cư Dân Bùn Lầy",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -6932,7 +6932,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Tích Dịch Nhân",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -6951,7 +6951,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Cây Ăn Thịt",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -6970,7 +6970,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Bạch Tuộc Phép Thuật",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -6989,7 +6989,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Cá Mập Xám",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -7008,7 +7008,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Cuồng Tín Hải Yêu",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -7027,7 +7027,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Bóng Ma Đại Tướng Keeger",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -7046,7 +7046,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] [Bát Triệu Hồi] Abatton",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -7065,7 +7065,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Kavakit",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -7084,7 +7084,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Linh Trứng] Thủy Thần Đèn",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9041,7 +9041,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cá Hề",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9060,7 +9060,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cá Mập",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9079,7 +9079,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phù",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9098,7 +9098,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rối Tai Ương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9117,7 +9117,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mực",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9136,7 +9136,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cua",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9155,7 +9155,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hồn Ma Thủy Thủ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9174,7 +9174,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoa Dương Hải",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9193,7 +9193,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cá Đột Biến",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9212,7 +9212,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sao Biển",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9231,7 +9231,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cua Đổ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9250,7 +9250,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sứa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9269,7 +9269,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sò Biến Dị",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9288,7 +9288,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Hoa Độc",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9307,7 +9307,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Chiến Binh Hải Yêu",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9326,7 +9326,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Thuật Chủ Hải Yêu",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9345,7 +9345,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Cư Dân Bùi Lầy",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9364,7 +9364,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Tích Dịch Nhân",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9383,7 +9383,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Hoa Ăn Thịt",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9402,7 +9402,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Bạch Tuộc Phép Thuật",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9421,7 +9421,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Cá Mập Xám",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9440,7 +9440,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Cuồng Tín Hải Yêu",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9459,7 +9459,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Bóng Ma Đại Tướng Keeger",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9478,7 +9478,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"[Bát Triệu Hồi] Abatton",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9497,7 +9497,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Kavakit",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -9516,7 +9516,7 @@
 		"de":"",
 		"jp":"",
 		"pt":"",
-		"vi":"",
+		"vi":"Thủy Thần Đèn",
 		"ar":"",
 		"it":"",
 		"pl":"",
@@ -14494,7 +14494,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[D] Mảnh Kim Loại Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -14513,7 +14513,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[C] Mảnh Kim Loại Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -14532,7 +14532,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[B] Mảnh Kim Loại Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -14551,7 +14551,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[A] Mảnh Kim Loại Hào Quang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22539,7 +22539,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Lv. 1-30] x 3<br> - Thánh Giá Phục Sinh<br> - Ngọc Nguyên Tố x 2<br> - Sách Đổi Mới Nhiệm Vụ Ngày",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 1-30] x 3<br> - Thánh Giá Phục Sinh<br> - Ngọc Nguyên Tố x 2<br> - Sách Đổi Mới Nhiệm Vụ Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22558,7 +22558,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Lv. 1-30] x 5<br> - Ngọc Nâng Cấp Nâng Cao [Lv. 1-30]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 5000",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 1-30] x 5<br> - Ngọc Nâng Cấp Nâng Cao [Cấp 1-30]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 5000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22615,7 +22615,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Nhấn chuột phải để nhận :<br> -Ngọc Nâng Cấp [Lv. 40] x 3<br> - Thánh Giá Phục Sinh<br> - Ngọc Nguyên Tố x 2<br> - Sách Đổi Mới Nhiệm Vụ Ngày",
+        "vi":"Nhấn chuột phải để nhận :<br> -Ngọc Nâng Cấp [Cấp 40] x 3<br> - Thánh Giá Phục Sinh<br> - Ngọc Nguyên Tố x 2<br> - Sách Đổi Mới Nhiệm Vụ Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22635,7 +22635,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chuột phải để nhận :<br> - Ngọc Nâng Cấp [Lv. 40] x 5<br> - Ngọc Nâng Cấp Nâng Cao [Lv. 40]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 6000",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 40] x 5<br> - Ngọc Nâng Cấp Nâng Cao [Cấp 40]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 6000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22655,7 +22655,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhấn chuột phải để nhận: <br> - Thuốc Hồi Máu Cao Cấp x 10<br> - Thuốc Năng Lượng Nhiều x 10<br> - Pha Lê Dịch Chuyển Nhỏ<br> - Hắc Ma Pháp x 8000",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22674,7 +22674,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhấn chuột phải để nhận :<br> - Thuốc Hồi Máu Cao Cấp x 20<br> - Thuốc Năng Lượng Nhiều x 20<br> - Bình Hồi Máu Tức Thì Lớn x 2<br> - Bình Năng Lượng Tức Thì Nhiều x 4<br> - Pha Lê Dịch Chuyển Nhỏ x 2<br> - Trục Hồi Thành x 2<br> - Vàng x 4000<br> - Ngọc Nguyên Tố",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22693,7 +22693,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 50] x 3<br> - Thánh Giá Phục Sinh<br> - Ngọc Nguyên Tố x 2<br> - Sách Đổi Mới Nhiệm Vụ Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -22712,7 +22712,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nhấn chuột phải để nhận :<br> - Ngọc Nâng Cấp [Cấp 50] x 5<br> - Ngọc Nâng Cấp Nâng Cao [Cấp 50]<br> - Thánh Giá Phục Sinh x 2<br> - Ngọc Nguyên Tố x 3<br> - Sách Đổi Mới Nhiệm Vụ Ngày x 2<br> - Vàng x 8000",
         "ar":"",
         "it":"",
         "pl":"",
