--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1645,7 +1645,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thành Phố Siren",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1664,7 +1664,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lâu Đài Sao Biển",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1683,7 +1683,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Pha Lê Đại Dương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1702,7 +1702,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vùng Biển Cá Mập",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1721,7 +1721,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trần Tinh Tú",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1740,7 +1740,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Tinh Tú - Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1759,7 +1759,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Tinh Tú - Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1778,7 +1778,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Tinh Tú - Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1797,7 +1797,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Tinh Tú - Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1816,7 +1816,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Tinh Tú - Tầng 5",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1835,7 +1835,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Tinh Tú - Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1854,7 +1854,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Tinh Tú - Thâm Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1873,7 +1873,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Biển Hoang Mang",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1892,7 +1892,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Biển Thần Bí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1911,7 +1911,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thị Trấn Sóng Biển",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1930,7 +1930,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cổng Tội Đồ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1949,7 +1949,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tòa Án Tàn Ác",
         "ar":"",
         "it":"",
         "pl":"",
