--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -1170,7 +1170,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rất nhiều mũi tên từ trên trời rơi xuống và gây Sát Thương theo thời gian trong một khu vực chỉ định trong 3 giây. Vào lần tấn công cuối, gây hiệu ứng Độc trong 5 giây.",
         "ar":"",
         "it":"",
         "pl":"",
