--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3440,7 +3440,7 @@
     },
     "item.2006.name":{
         "en":"Miser - Armor",
-        "fr":"Avare - Casque",
+        "fr":"Avare - Armure",
         "es":"",
         "zh-cn":"守财奴 - 胸甲",
         "zh-tw":"",
