start of guild shop

--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3970,6 +3970,101 @@
         "th":"",
         "id":""
     },
+    "UI.windows.guild.shop.title":{
+        "en":"Guild Shop",
+        "fr":"Magasin de Guilde",
+        "es":"",
+        "zh-cn":"公会商店",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cửa Hàng Công Hội",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.shop.tab.potions":{
+        "en":"Potions",
+        "fr":"Potions",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.shop.tab.treasure":{
+        "en":"Treasures",
+        "fr":"Trésors",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.shop.btn.buy":{
+        "en":"{0} Guild score",
+        "fr":"{0} Score de guilde",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.shop.requires-level":{
+        "en":"Requires guild shop level {0}",
+        "fr":"Requiers un Magasin de Guilde niveau {0}",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.spirit.title":{
         "en":"Spirit",
         "fr":"Esprit",
