--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4065,6 +4065,44 @@
         "th":"",
         "id":""
     },
+    "UI.windows.guild.shop.daily-limit":{
+        "en":"Daily limit: {0}",
+        "fr":"Limite quotidienne: {0}",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.guild.shop.daily-limit.no-limit":{
+        "en":"No limit",
+        "fr":"Pas de limite",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.spirit.title":{
         "en":"Spirit",
         "fr":"Esprit",
