--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4001,7 +4001,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dược Phẩm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4020,7 +4020,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kho Báu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4039,7 +4039,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điểm của công hội {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4058,7 +4058,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Yêu cầu cửa hàng công hội cấp độ {0}",
         "ar":"",
         "it":"",
         "pl":"",
