--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4077,7 +4077,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Giới hạn ngày: {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4096,7 +4096,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Không giới hạn",
         "ar":"",
         "it":"",
         "pl":"",
